--- a/src/app.css
+++ b/src/app.css
@@ -1,6 +1,8 @@
+@import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
  
 @layer base {
   :root {
@@ -75,4 +77,11 @@
   body {
     @apply bg-background text-foreground;
   }
+}
+
+
+body{
+  background-image: url('/bg.jpg');
+  background-size: cover;
+  background-position: center center;
 }
